# gym-pass-pro

./: .dockerignore  .env.example  .env.mail.example  .env.prod.example  .env.staging.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.gitlab.yml  docker-compose.mail.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  index.html  package.json  vite.config.js
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_gym_photos.py  0003_normalize_tier_enum.py  0004_support_tickets.py  0005_user_detail_and_referrals.py  0006_gym_logo.py  0007_payment_methods.py  0008_subscription_pauses.py  0009_payment_method_google_pay.py  0010_indexes_and_constraints.py  0011_rename_emerald_to_platinum.py  0012_gym_owner_role.py  0013_users_gym_id.py  0014_partner_hot_path_indexes.py  0015_gym_logo_alignment.py  0016_gym_audience_gender.py  0017_partner_applications.py  0018_audit_log_partitioned.py  0019_day_passes.py  0020_refund_and_fee.py  0021_jod_money_scale_3.py  0022_admin_scope_and_token_version.py  0022_admin_scope_token_ver.py  0023_purchased_price_snapshot.py  0024_fk_supporting_indexes.py  0025_day_pass_unique_active_per_user_gym.py  0025_drop_gym_name_ar.py  0026_device_tokens.py  0027_merge_heads.py  0028_partner_access.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/core/: error_handlers.py  exceptions.py  logging.py  (+5 more)
backend/scripts/: bootstrap_admin.py  seed.py
backend/tests/: conftest.py
(+675 files in other folders)
