[project]
name = "gympass-backend"
version = "0.1.0"
description = "GymPass FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "gunicorn>=23.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.1",
  "celery>=5.4",
  "structlog>=24.4",
  "python-jose[cryptography]>=3.3",
  "passlib[argon2]>=1.7.4",
  "argon2-cffi>=23.1",
  "httpx>=0.27",
  "google-auth>=2.35",
  "email-validator>=2.2",
  "python-multipart>=0.0.12",
  "ulid-py>=1.1",
  # Sentry — optional at runtime (init is a no-op when SENTRY_DSN
  # is unset) but we ship the SDK as a baked-in dep so operators
  # flip the env var without a rebuild. `fastapi` + `sqlalchemy`
  # extras wire the matching integrations.
  "sentry-sdk[fastapi,sqlalchemy]>=2.16",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-python-jose>=3.3",
  "faker>=30",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# pytest config lives in pytest.ini; when both exist, pytest.ini wins and
# settings here are silently ignored.

[tool.coverage.run]
source = ["app"]
omit = ["app/workers/*", "alembic/*", "scripts/*"]
